euphony-sc-core/src/snapshots/euphony_sc_core__osc__node__fill_test.snap
---
source: euphony-sc-core/src/osc.rs
expression: msg
---
Ok(
    Message(
        OscMessage {
            addr: "/n_fill",
            args: [
                Int(
                    2,
                ),
                Int(
                    1,
                ),
                Int(
                    3,
                ),
                Float(
                    3.24,
                ),
            ],
        },
    ),
)
