euphony-sc-core/src/snapshots/euphony_sc_core__osc__node__free_test.snap
---
source: euphony-sc-core/src/osc.rs
expression: msg
---
Ok(
    Message(
        OscMessage {
            addr: "/n_free",
            args: [
                Int(
                    2,
                ),
            ],
        },
    ),
)
