euphony-sc-core/src/snapshots/euphony_sc_core__osc__node__run_test-2.snap
---
source: euphony-sc-core/src/osc.rs
expression: msg
---
Ok(
    Message(
        OscMessage {
            addr: "/n_run",
            args: [
                Int(
                    2,
                ),
                Int(
                    0,
                ),
            ],
        },
    ),
)
