euphony-sc-core/src/snapshots/euphony_sc_core__osc__node__set_test.snap
---
source: euphony-sc-core/src/osc.rs
expression: msg
---
Ok(
    Message(
        OscMessage {
            addr: "/n_set",
            args: [
                Int(
                    2,
                ),
                Int(
                    1,
                ),
                Float(
                    3.14,
                ),
                String(
                    "controla",
                ),
                Int(
                    123,
                ),
            ],
        },
    ),
)
