euphony-sc-core/src/snapshots/euphony_sc_core__osc__node__setn_test.snap
---
source: euphony-sc-core/src/osc.rs
expression: msg
---
Ok(
    Message(
        OscMessage {
            addr: "/n_setn",
            args: [
                Int(
                    2,
                ),
                Int(
                    1,
                ),
                Int(
                    2,
                ),
                Float(
                    3.14,
                ),
                Int(
                    123,
                ),
            ],
        },
    ),
)
